# ocrbatcher

./: .env.example  .gitignore  README.md  pyproject.toml
grader/: __init__.py  ai_cleanup.py  cli.py  config.py  export.py  logging_utils.py  naming.py  ocr.py  pdf_utils.py
grader/clients/: google_vision_client.py  xai_client.py
scripts/: sample_env.env
tests/: test_cleanup_guardrails.py  test_config.py  test_naming.py
